[package]
name = "pyskim"
version = "0.1.0"
authors = ["Robert Deaton <rdeaton@platipy.org>"]
edition = "2018"

[lib]
name = "pyskim"
crate-type = ["cdylib"]

[dependencies]
skim = "0.6.8"
#skim = { git = "https://github.com/rdeaton/skim.git" }
#skim = { path = "../skim/" }

[dependencies.pyo3]
version = "0.7.0"
features = ["extension-module"]
